added maven framework support